# RobotVQA

./: .gitmodules  LICENSE  README.md  requirements.txt
Dissertation/: Thesis.txt
UE4.16/: readme.md
dataset/: cleanup.txt  datasetStructure.txt  distribution.data  readme.md  real_training_dataset(500_Images).data  real_training_dataset_310_Images.data
images/: testsss.3gp
logs/robotvqa20180824T1500/: mask_rcnn_robotvqa_0794.h5
logs1/robotvqa20180928T1528/: mask_rcnn_robotvqa_0228.h5  mask_rcnn_robotvqa_0369.h5
models/: robotVQA.py
result/: readme.txt
robotvqa_visualizer/: CMakeLists.txt  package.xml
robotvqa_visualizer/launch/: robotvqa_visualizer.launch
robotvqa_visualizer/nodes/: TaskManager.py  robotvqa_visualizer.py
tools/: DatasetClasses.py  TaskManager.py  data_augmentation.py  generateDataset.py  launcher.py  relationAnnotator.py  robotVQAConfig.py  tester.py  utils.py  utils.py~  visualize.py
